; ModuleID = '/home/carl/AnghaBench/8cc/extr_cpp.c_read_define.c'
source_filename = "/home/carl/AnghaBench/8cc/extr_cpp.c_read_define.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @read_define to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @read_define() #0 {
  %1 = alloca %struct.TYPE_7__*, align 8
  %2 = alloca %struct.TYPE_7__*, align 8
  %3 = call %struct.TYPE_7__* (...) @read_ident()
  store %struct.TYPE_7__* %3, %struct.TYPE_7__** %1, align 8
  %4 = call %struct.TYPE_7__* (...) @lex()
  store %struct.TYPE_7__* %4, %struct.TYPE_7__** %2, align 8
  %5 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %6 = call i64 @is_keyword(%struct.TYPE_7__* %5, i8 signext 40)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %16

8:                                                ; preds = %0
  %9 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %10 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %16, label %13

13:                                               ; preds = %8
  %14 = load %struct.TYPE_7__*, %struct.TYPE_7__** %1, align 8
  %15 = call i32 @read_funclike_macro(%struct.TYPE_7__* %14)
  br label %23

16:                                               ; preds = %8, %0
  %17 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %18 = call i32 @unget_token(%struct.TYPE_7__* %17)
  %19 = load %struct.TYPE_7__*, %struct.TYPE_7__** %1, align 8
  %20 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @read_obj_macro(i32 %21)
  br label %23

23:                                               ; preds = %16, %13
  ret void
}

declare dso_local %struct.TYPE_7__* @read_ident(...) #1

declare dso_local %struct.TYPE_7__* @lex(...) #1

declare dso_local i64 @is_keyword(%struct.TYPE_7__*, i8 signext) #1

declare dso_local i32 @read_funclike_macro(%struct.TYPE_7__*) #1

declare dso_local i32 @unget_token(%struct.TYPE_7__*) #1

declare dso_local i32 @read_obj_macro(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
